# larql

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  flake.nix
crates/kv-cache-benchmark/: Cargo.toml  README.md
crates/kv-cache-benchmark/benches/: kv_strategies.rs
crates/kv-cache-benchmark/docs/: accuracy-test-suite.md  kv-cache-benchmark-spec-v3.md
crates/kv-cache-benchmark/examples/: accuracy_suite.rs  bit_budget_additivity_q4k.rs  decode_bench.rs  ffn_coverage.rs  multi_turn_demo.rs  patch_propagation_q4k.rs  q4k_ffn_raw_bridge.rs  real_model_bench.rs  shader_bench.rs  vindex_compare.rs
crates/kv-cache-benchmark/results/: decode_comparison.json  real_model.json
crates/kv-cache-benchmark/src/: accuracy.rs  benchmark.rs  lib.rs  metrics.rs  shader_bench.rs  standard_kv.rs  vindex_compare.rs
crates/kv-cache-benchmark/tests/: test_accuracy.rs  test_accuracy_suite.rs  test_apollo_accuracy.rs  test_apollo_query.rs  test_apollo_store.rs  test_comparative.rs  test_graph_walk.rs  test_markov.rs  test_real_model.rs  test_shaders.rs  test_standard.rs  test_turboquant.rs  test_unlimited_context.rs
crates/larql-boundary/: Cargo.toml  README.md
crates/larql-boundary/benches/: codec.rs
crates/larql-boundary/examples/: accuracy.rs  encode_decode.rs  gate_decision.rs
crates/larql-boundary/src/: frame.rs  gate.rs  lib.rs  metadata.rs
crates/larql-boundary/tests/: integration.rs
crates/larql-cli/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
crates/larql-cli/docs/: fidelity-spec.md  quantize-spec.md  slot-bits-spec.md
crates/larql-cli/examples/: convert_moe_to_per_layer.rs  patch_down_proj.rs
crates/larql-cli/src/: attention_walk_cmd.rs  bfs_cmd.rs  main.rs  vector_extract_cmd.rs  weight_walk_cmd.rs
crates/larql-cli/tests/: test_run_experts.rs
crates/larql-compute/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  build.rs  coverage-policy.json
crates/larql-compute/benches/: README.md  linalg.rs  matmul.rs  quant_matvec.rs
crates/larql-compute/csrc/: q4_dot.c
crates/larql-compute/docs/: architecture-shader-map.md  decode-pipeline.md  llama-cpp-comparison.md  shader-inventory.md  shaders.md
crates/larql-compute/examples/: README.md  best_pipeline.rs  compare_decode.rs  compare_formats.rs  compare_generation.rs  compare_ollama.rs  compare_pipeline.rs  debug_decode_pipeline.rs  demo_architecture.rs  demo_basic.rs  demo_ridge_solve.rs  diag_decode_pipeline.rs  diag_profile_kernels.rs  diag_shader_bench.rs  profile_components.rs  profile_kernels.rs  profile_kv_cache.rs  profile_operations.rs  profile_per_layer.rs  profile_raw_dispatch.rs
crates/larql-compute/src/: backend.rs  lib.rs  options.rs  pipeline.rs
crates/larql-compute/tests/: test_backend_matmul_quant.rs  test_correctness.rs  test_kernel_fused_attention.rs  test_kernel_fused_ops_norms.rs  test_kernel_handle_contract.rs  test_kernel_kv_attention.rs  test_kernel_kv_cache_append.rs  test_kernel_lm_head_gemv.rs  test_kernel_moe_expert_dispatch.rs  test_kernel_new_fused_kernels.rs  test_kernel_per_layer_embed.rs  test_kernel_q4k_ffn_gate_up.rs  test_kernel_q4k_ffn_gate_up_8sg.rs  test_kernel_q4k_ffn_gate_up_f16acc.rs  test_kernel_q4k_geglu_down.rs  test_kernel_q4k_matmul.rs  test_kernel_q4k_matmul_perf.rs  test_kernel_q4k_matvec_8sg.rs  test_kernel_q6k_geglu_down.rs  test_kernel_q6k_matvec_8sg.rs  test_kernel_qk_norm.rs  test_kernel_rope.rs  test_kernel_rope_at_pos.rs  test_kernel_v_norm.rs  test_kernel_vindex_integration.rs  test_metal_decode_synthetic.rs  test_metal_shaders.rs  test_pipeline_and_moe.rs  test_q4_x86_correctness.rs  test_q4k_parity.rs
crates/larql-core/: Cargo.toml  README.md  ROADMAP.md
crates/larql-core/benches/: graph.rs
crates/larql-core/examples/: algorithm_demo.rs  bench_graph.rs  filter_demo.rs  graph_demo.rs  serialization_demo.rs
crates/larql-core/src/: lib.rs
crates/larql-core/tests/: test_algo.rs  test_bfs_mock.rs  test_chain.rs  test_components_walk.rs  test_graph.rs  test_new_algos.rs  test_python_compat.rs  test_roundtrip.rs
crates/larql-experts/: Cargo.toml  README.md
crates/larql-experts/expert-interface/: Cargo.toml
crates/larql-inference/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md
crates/larql-inference/benches/: wire_codec.rs
crates/larql-inference/docs/: trace-format.md
crates/larql-inference/examples/: apollo_rd_backend.rs  attention_demo.rs  backend_demo.rs  bench_adaptive_graph.rs  bench_attention.rs  bench_backend.rs  bench_components.rs  bench_ffn_cache.rs  bench_gemma4.rs  bench_generate.rs  bench_guided_walk.rs  bench_hybrid.rs  bench_inference.rs  bench_layer_graph.rs  bench_rope.rs  bench_sampling.rs  bench_seqlen.rs  bench_topk_sweep.rs  bench_walk_inference.rs  chat_demo.rs  clustering_demo.rs  cpu_gpu_diag.rs  debug_generate.rs  debug_gpu_step.rs  debug_layers.rs  debug_q4k.rs  debug_q6k_v.rs  debug_v_bytes.rs  debug_v_quant.rs  decode_vs_prefill.rs  detok_demo.rs  eos_demo.rs  experts_demo.rs  ffn_cache_demo.rs  ffn_profile.rs  mech_interp_demo.rs  memory_analysis.rs  memory_audit.rs  moe_grid_generate.rs  pair_matching_demo.rs  (+21 more)
crates/larql-inference/src/: attention.rs  capture.rs  forward.rs  graph_ffn.rs  lib.rs  model.rs  prompt.rs  residual.rs  test_utils.rs  tokenizer.rs  vector_index.rs
crates/larql-kv/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  coverage-policy.json
crates/larql-kv/src/: accuracy.rs  (+2 more)
crates/larql-lql/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
crates/larql-models/: Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md
crates/larql-python/: README.md  build.rs  pyproject.toml
crates/larql-router/: Cargo.toml  README.md  ROADMAP.md
crates/larql-router-protocol/: Cargo.toml  build.rs
crates/larql-server/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  THESIS.md  build.rs  coverage-policy.json
crates/larql-vindex/: CHANGELOG.md  Cargo.toml  FFN_VINDEX_UNIFICATION_SPEC.md  PERFORMANCE.md  README.md  ROADMAP.md  coverage-policy.json
crates/model-compute/: Cargo.toml  README.md
(+1199 files in other folders)
