[workspace]
resolver = "2"
members = [
    # larql-specific
    "crates/larql-models",
    "crates/larql-compute",
    "crates/larql-core",
    "crates/larql-vindex",
    "crates/larql-inference",
    "crates/larql-lql",
    "crates/larql-cli",
    "crates/larql-server",
    "crates/larql-router",
    "crates/larql-router-protocol",
    "crates/larql-python",
    "crates/kv-cache-benchmark",
    # portable (extract to sibling repos later, names stable)
    "crates/model-compute",
]
default-members = [
    "crates/larql-models",
    "crates/larql-compute",
    "crates/larql-core",
    "crates/larql-vindex",
    "crates/larql-inference",
    "crates/larql-lql",
    "crates/larql-cli",
    "crates/larql-server",
    "crates/larql-router",
    "crates/larql-router-protocol",
    "crates/kv-cache-benchmark",
    "crates/model-compute",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = []
license = "Apache-2.0"
repository = "https://github.com/chrishayuk/chuk-larql-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
