[package]
name = "kv-cache-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "KV cache benchmark: Standard KV vs TurboQuant vs Markov RS vs Graph Walk"

[features]
default = []
real-model = ["larql-vindex", "larql-models", "ndarray", "tokenizers", "zip"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand = "0.8"
rand_distr = "0.4"

# Always available: needed for the criterion bench (accuracy metrics, engine_kind).
larql-inference = { path = "../larql-inference" }
larql-compute = { path = "../larql-compute" }

# Optional: full real-model integration (real weights, vindex, tokenizer).
larql-vindex = { path = "../larql-vindex", optional = true }
larql-models = { path = "../larql-models", optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.21", optional = true }
# `zip` for reading the .npz container in apollo11_store (uncompressed archives).
zip = { version = "2", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kv_strategies"
harness = false
