[package]
name = "larql-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for LARQL knowledge graph extraction and querying"

[[bin]]
name = "larql"
path = "src/main.rs"

[dependencies]
larql-core = { path = "../larql-core" }
larql-compute = { path = "../larql-compute" }
larql-inference = { path = "../larql-inference" }
larql-kv = { path = "../larql-kv" }
larql-models = { path = "../larql-models" }
larql-lql = { path = "../larql-lql" }
larql-vindex = { path = "../larql-vindex" }
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
tokenizers = "0.21"
safetensors = "0.7"
memmap2 = "0.9"
ndarray = "0.16"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
minijinja = "2"
libc = "0.2"

[features]
default = ["metal"]
metal = [
    "larql-compute/metal",
    "larql-inference/metal",
    "larql-kv/metal",
    "larql-vindex/metal",
]

[dev-dependencies]
tempfile = "3"
