[package]
name = "larql-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core graph engine for LARQL — knowledge graphs extracted from neural network weights"
keywords = ["knowledge-graph", "llm", "interpretability", "graph"]
categories = ["data-structures", "science"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# HTTP provider — optional so pure graph usage has zero network deps
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

# Binary serialization via MessagePack
rmp-serde = { version = "1", optional = true }

# Weight walking — safetensors + matrix ops + tokenizer
safetensors = { version = "0.5", optional = true }
ndarray = { version = "0.16", features = ["blas"], optional = true }
blas-src = { version = "0.10", features = ["accelerate"], optional = true }
tokenizers = { version = "0.21", optional = true }
memmap2 = { version = "0.9", optional = true }

[features]
default = ["http", "msgpack", "walker"]
http = ["dep:reqwest"]
msgpack = ["dep:rmp-serde"]
walker = ["dep:safetensors", "dep:ndarray", "dep:blas-src", "dep:tokenizers", "dep:memmap2"]

[dev-dependencies]
assert_approx_eq = "1"
