[package]
name = "larql-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transformer inference engine — forward pass, attention, FFN, layer norm from safetensors weights"
keywords = ["transformer", "inference", "llm", "interpretability"]
categories = ["science"]

[dependencies]
larql-models = { path = "../larql-models" }
larql-compute = { path = "../larql-compute" }
larql-core = { path = "../larql-core" }
larql-vindex = { path = "../larql-vindex" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Model weights
safetensors = "0.5"
memmap2 = "0.9"

# System
libc = "0.2"

# Matrix ops (BLAS-accelerated)
ndarray = { version = "0.16", features = ["blas"] }

# Tokenizer
tokenizers = "0.21"


[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }

[features]
default = []
metal = ["larql-compute/metal"]

[dev-dependencies]
assert_approx_eq = "1"
tempfile = "3"
