[package]
name = "larql-lql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LQL parser, executor, and REPL for LARQL"

[dependencies]
larql-compute = { path = "../larql-compute" }
larql-core = { path = "../larql-core" }
larql-inference = { path = "../larql-inference" }
larql-models = { path = "../larql-models" }
larql-vindex = { path = "../larql-vindex" }
ndarray = "0.16"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "15"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Enable Metal-accelerated paths in `larql-compute` / `larql-inference`.
# Mirrors the features in those crates so workspace tests can be built
# with `--features metal` from this package.
metal = ["larql-compute/metal", "larql-inference/metal", "larql-vindex/metal"]

[dev-dependencies]
criterion = "0.5"
# Mocked HTTP server for testing the Remote backend's forwarders
# without spinning up a real `larql-server`. Each test wires a
# `mockito::Server`, points the session at it via `USE "<url>"`, and
# asserts on the canned response.
mockito = "1.7"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "executor"
harness = false

[[bench]]
name = "compile"
harness = false
