[package]
name = "larql-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server for vindex knowledge queries and inference"

[[bin]]
name = "larql-server"
path = "src/main.rs"

[dependencies]
larql-vindex = { path = "../larql-vindex" }
larql-inference = { path = "../larql-inference" }
larql-models = { path = "../larql-models" }
larql-router-protocol = { path = "../larql-router-protocol" }

axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
prost = "0.13"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive", "env"] }
memmap2 = "0.9"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
protobuf-src = "2"
