[package]
name = "larql-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server for vindex knowledge queries and inference"

[lib]
name = "larql_server"
path = "src/lib.rs"

[[bin]]
name = "larql-server"
path = "src/main.rs"

[dependencies]
larql-vindex = { path = "../larql-vindex" }
larql-inference = { path = "../larql-inference" }
larql-models = { path = "../larql-models" }
larql-router-protocol = { path = "../larql-router-protocol" }
# Optional Metal backend for shard-side GPU experts (macOS).  When the
# `metal-experts` feature is enabled, the server uses
# `MetalBackend::run_experts_preselected_metal` to dispatch each layer's
# selected experts on the GPU instead of running them per-expert on CPU.
larql-compute = { path = "../larql-compute" }

axum = { version = "0.8", features = ["ws"] }
half = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
# Constant-time byte equality for API-key comparison (auth middleware).
# Already in the lockfile via rustls; declared here as a direct dep so the
# threat-model rationale is visible at the crate boundary.
subtle = "2.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
prost = "0.13"
async-stream = "0.3"
futures = "0.3"
rayon = "1.10"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
memmap2 = "0.9"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
utoipa = { version = "5", features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[features]
default = []
# Enable Metal-backed GPU expert kernels on the shard server.  Forwards to
# `larql-compute`'s `metal` feature.  macOS-only.
metal-experts = ["larql-compute/metal"]

[build-dependencies]
tonic-build = "0.13"

# See `crates/larql-router-protocol/Cargo.toml` for the Windows
# rationale: `protobuf-src` builds protoc via cmake and the link step
# fails on windows-latest. On Windows we rely on a system protoc
# (installed by CI via `arduino/setup-protoc`).
[target.'cfg(not(windows))'.build-dependencies]
protobuf-src = "2"
