[package]
name = "larql-vindex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vindex — the queryable model format. Storage, KNN index, build, load, mutate."
keywords = ["transformer", "vindex", "knn", "interpretability"]
categories = ["science"]

[dependencies]
larql-core = { path = "../larql-core", default-features = false }
larql-models = { path = "../larql-models" }
larql-compute = { path = "../larql-compute" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Matrix types (all compute via larql-compute)
ndarray = "0.16"

# Parallelism for the direct-Q4K matmul kernel (feature walk).
rayon = "1.10"

# Tokenizer (for embeddings loading + token resolution)
tokenizers = "0.21"

# Checksums
sha2 = "0.10"

# base64 encoding for the HF preupload file-sample field.
base64 = "0.22"

# Model weights (for safetensors loading during extract)
safetensors = "0.7"
memmap2 = "0.9"

# Refcounted, slice-cheap byte handle returned by the `VindexStorage`
# trait. `Bytes::from_owner(Arc<Mmap>)` is zero-copy from the existing
# mmap path and Redis / S3 backends can return owned bytes without
# lifetime contortions. Already transitive via reqwest / hf-hub.
bytes = "1"

# HuggingFace Hub integration
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# OS-level mmap hints (madvise)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
metal = ["larql-compute/metal"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
# HTTP mocking for the publish trio (lfs / remote / upload).
# `serial_test` because the tests set the LARQL_HF_TEST_BASE env var to
# point at a per-test mockito server; env vars are process-global, so
# parallel runs would race.
mockito = "1.7"
serial_test = "3.2"

[[bench]]
name = "vindex_ops"
harness = false

[[bench]]
name = "vindex_scaling"
harness = false

[[bench]]
name = "memit_solve"
harness = false

[[bench]]
name = "extract_throughput"
harness = false

[[bench]]
name = "q4k_vs_f32"
harness = false

[[bench]]
name = "hnsw_decode"
harness = false

[[bench]]
name = "q4k_cache"
harness = false

[[bench]]
name = "cpu_vs_gpu"
harness = false

[[bench]]
name = "walker_throughput"
harness = false

# Step 3 of the VindexStorage migration — perf gate before any
# substore migration in step 4. Compares direct vs trait-static vs
# trait-dyn dispatch on `interleaved_q4k_layer_data`. See the bench
# file for the acceptance bar.
[[bench]]
name = "vindex_storage_dispatch"
harness = false
